[gd_scene load_steps=7 format=2]

[ext_resource path="res://raw_assets/images/plants/stalks/bamboo.svg" type="Texture" id=1]
[ext_resource path="res://src/CloseUpPlant/Stalks/Stalk.gd" type="Script" id=2]
[ext_resource path="res://godot_assets/shaders/pixelate.tres" type="Material" id=3]

[sub_resource type="Animation" id=3]
resource_name = "Dead"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("StalkSkeleton/SkelDown/SkelMid:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 6.6906 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StalkSkeleton/SkelDown:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 6.83554 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StalkSkeleton/SkelDown/SkelMid/SkelUp:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 14.5824 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("StalkSkeleton/SkelDown:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 3.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -0.782973, 0.204563 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StalkSkeleton/SkelDown:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2, 3.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StalkSkeleton/SkelDown/SkelMid:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StalkSkeleton/SkelDown/SkelMid/SkelUp:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("StalkSkeleton/SkelDown:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StalkSkeleton/SkelDown:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StalkSkeleton/SkelDown:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StalkSkeleton/SkelDown/SkelMid/SkelUp:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -763 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("StalkSkeleton/SkelDown/SkelMid/SkelUp:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("StalkSkeleton/SkelDown/SkelMid/SkelUp:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("StalkSkeleton/SkelDown/SkelMid:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -570 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("StalkSkeleton/SkelDown/SkelMid:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("StalkSkeleton/SkelDown/SkelMid:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("StalkSkeleton/SkelDown/SkelMid/SkelUp/SkelTop:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -475 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("StalkSkeleton/SkelDown/SkelMid/SkelUp/SkelTop:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("StalkSkeleton/SkelDown/SkelMid/SkelUp/SkelTop:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="Stalk" type="Node2D"]
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 3 )
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 1 )

[node name="Polygons" type="Node2D" parent="."]
material = ExtResource( 3 )

[node name="StalkDown" type="Polygon2D" parent="Polygons"]
modulate = Color( 0.584314, 0.698039, 0.486275, 1 )
use_parent_material = true
offset = Vector2( -225, -2350 )
texture = ExtResource( 1 )
skeleton = NodePath("../../StalkSkeleton")
polygon = PoolVector2Array( 32, 2400, 416, 2400, 416, 1760, 32, 1760 )
uv = PoolVector2Array( 32, 2400, 416, 2400, 416, 1760, 32, 1760 )
bones = [ "SkelDown", PoolRealArray( 1, 1, 1, 1 ), "SkelDown/SkelMid", PoolRealArray( 0, 0, 0, 0 ), "SkelDown/SkelMid/SkelUp", PoolRealArray( 0, 0, 0, 0 ), "SkelDown/SkelMid/SkelUp/SkelTop", PoolRealArray( 0, 0, 0, 0 ) ]

[node name="StalkMid" type="Polygon2D" parent="Polygons"]
visible = false
modulate = Color( 0.584314, 0.698039, 0.486275, 1 )
use_parent_material = true
position = Vector2( 0, -200 )
offset = Vector2( -225, -2125 )
texture = ExtResource( 1 )
skeleton = NodePath("../../StalkSkeleton")
polygon = PoolVector2Array( 416, 1760, 32, 1760, 32, 992, 416, 992 )
uv = PoolVector2Array( 416, 1760, 32, 1760, 32, 992, 416, 992 )
bones = [ "SkelDown", PoolRealArray( 0, 0, 0, 0 ), "SkelDown/SkelMid", PoolRealArray( 1, 1, 1, 1 ), "SkelDown/SkelMid/SkelUp", PoolRealArray( 0, 0, 0, 0 ), "SkelDown/SkelMid/SkelUp/SkelTop", PoolRealArray( 0, 0, 0, 0 ) ]

[node name="StalkUp" type="Polygon2D" parent="Polygons"]
visible = false
modulate = Color( 0.584314, 0.698039, 0.486275, 1 )
use_parent_material = true
position = Vector2( 0, -410 )
offset = Vector2( -225, -1650 )
texture = ExtResource( 1 )
skeleton = NodePath("../../StalkSkeleton")
polygon = PoolVector2Array( 416, 768, 31.9999, 768, 31.9999, 0, 416, 0 )
uv = PoolVector2Array( 416, 768, 31.9999, 768, 31.9999, 0, 416, 0 )
bones = [ "SkelDown", PoolRealArray( 0, 0, 0, 0 ), "SkelDown/SkelMid", PoolRealArray( 0, 0, 0, 0 ), "SkelDown/SkelMid/SkelUp", PoolRealArray( 1, 1, 1, 1 ), "SkelDown/SkelMid/SkelUp/SkelTop", PoolRealArray( 0, 0, 0, 0 ) ]

[node name="StalkSkeleton" type="Skeleton2D" parent="."]

[node name="SkelDown" type="Bone2D" parent="StalkSkeleton"]
rest = Transform2D( 1, 0, 0, 1, 0, 0 )
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="SkelMid" type="Bone2D" parent="StalkSkeleton/SkelDown"]
position = Vector2( 0, -570 )
rest = Transform2D( 1, 0, 0, 1, 0, -570 )
__meta__ = {
"_edit_bone_": true
}

[node name="SkelUp" type="Bone2D" parent="StalkSkeleton/SkelDown/SkelMid"]
position = Vector2( 0, -763 )
rest = Transform2D( 1, 0, 0, 1, 0, -763 )
__meta__ = {
"_edit_bone_": true
}

[node name="SkelTop" type="Bone2D" parent="StalkSkeleton/SkelDown/SkelMid/SkelUp"]
position = Vector2( 0, -475 )
rest = Transform2D( 1, 0, 0, 1, 0, -475 )
__meta__ = {
"_edit_bone_": true
}
